--- a/codeready-workspaces-devfileregistry/Dockerfile
+++ b/codeready-workspaces-devfileregistry/Dockerfile
@@ -70,7 +70,7 @@ RUN /tmp/rhel.cache_projects.sh /build/ && rm -rf /tmp/rhel.cache_projects.sh /t
 RUN ./index.sh > /build/devfiles/index.json
 RUN ./list_referenced_images.sh devfiles > /build/devfiles/external_images.txt
 RUN chmod -R g+rwX /build/devfiles
-RUN chmod -R g+rwX /build/resources
+#######RUN chmod -R g+rwX /build/resources
 
 ################# 
 # PHASE TWO: configure registry image
@@ -113,7 +113,7 @@ WORKDIR /var/www/html
 RUN mkdir -m 777 /var/www/html/devfiles
 COPY README.md .htaccess /var/www/html/
 COPY --from=builder /build/devfiles /var/www/html/devfiles
-COPY --from=builder /build/resources /var/www/html/resources
+#######COPY --from=builder /build/resources /var/www/html/resources
 COPY ./images /var/www/html/images
 COPY ./build/dockerfiles/rhel.entrypoint.sh ./build/dockerfiles/entrypoint.sh /usr/local/bin/
 RUN chmod g+rwX /usr/local/bin/entrypoint.sh /usr/local/bin/rhel.entrypoint.sh && \
