--- a/codeready-workspaces-pluginregistry/deploy/openshift/crw-plugin-registry.yaml
+++ b/codeready-workspaces-pluginregistry/deploy/openshift/crw-plugin-registry.yaml
@@ -12,7 +12,40 @@ apiVersion: v1
 kind: Template
 metadata:
   name: codeready-plugin-registry
-objects:
+objects:  
+  - apiVersion: v1
+    kind: ImageStream
+    metadata:
+      labels:
+        app: codeready-plugin-registry-external
+      name: plugin-custom-example
+      namespace: openshift-workspaces
+  - apiVersion: v1
+    kind: BuildConfig
+    metadata:
+      name: docker-build-plugin
+      namespace: openshift-workspaces
+      labels:
+        app: codeready-plugin-registry-external
+        name: docker-build-plugin
+    spec:
+      output:
+        to:
+          kind: ImageStreamTag
+          name: ${IMAGE}:${IMAGE_TAG}
+      
+      strategy:
+        type: Docker
+        dockerStrategy:
+          dockerfilePath: build/dockerfiles/Dockerfile
+      source:
+        type: Git
+        git:
+          uri: 'https://github.com/eits-lafargeholcim/codeready-workspaces.git'
+          ref: custom-devregistry-install
+        contextDir: che-plugin-registry
+      triggers:
+        - type: ConfigChange
   - apiVersion: v1
     kind: DeploymentConfig
     metadata:
@@ -40,7 +73,7 @@ objects:
             component: plugin-registry
         spec:
           containers:
-            - image: ${IMAGE}:${IMAGE_TAG}
+            - image: ${REGISTRY}/${IMAGE}:${IMAGE_TAG}
               imagePullPolicy: ${PULL_POLICY}
               name: plugin-registry
               ports:
@@ -110,6 +143,7 @@ objects:
       CRW_SIDECAR_CONTAINERS_REGISTRY_URL: ${CRW_SIDECAR_CONTAINERS_REGISTRY_URL}
       CRW_SIDECAR_CONTAINERS_REGISTRY_ORGANIZATION: ${CRW_SIDECAR_CONTAINERS_REGISTRY_ORGANIZATION}
       CRW_SIDECAR_CONTAINERS_REGISTRY_TAG: ${CRW_SIDECAR_CONTAINERS_REGISTRY_TAG}
+      CHE_PLUGIN_REGISTRY_URL: ${CHE_PLUGIN_REGISTRY_URL}
 parameters:
   - name: IMAGE
     value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8
@@ -140,3 +174,11 @@ parameters:
     displayName: Plugin sidecar images tag
     description: Tag used for overridden sidecar images; used to override base images
       in plugins
+  - name: REGISTRY
+    value: registry.redhat.io/codeready-workspaces
+    displayName: CodeReady Workspaces devfile registry
+    description: CodeReady Workspaces devfile registry container image. Defaults to
+      registry.redhat.io/codeready-workspaces
+  - name: CHE_PLUGIN_REGISTRY_URL
+    displayName: Devfile registry public url
+    description: Devfile registry public url
