--- a/codeready-workspaces-pluginregistry/che-theia-plugins.yaml
+++ b/codeready-workspaces-pluginregistry/che-theia-plugins.yaml
@@ -10,7 +10,7 @@ plugins:
       url: 'https://github.com/Microsoft/vscode-node-debug'
       revision: v1.44.8
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-node-debug
       memoryLimit: 512Mi
       memoryRequest: 20Mi
@@ -21,7 +21,7 @@ plugins:
       url: 'https://github.com/Microsoft/vscode-js-debug'
       revision: v1.52.2
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: jsdebug
       memoryLimit: 512Mi
       memoryRequest: 20Mi
@@ -37,7 +37,7 @@ plugins:
     preferences:
       debug.node.useV3: false
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-node
       memoryLimit: 1Gi
       memoryRequest: 20Mi
@@ -50,7 +50,7 @@ plugins:
       directory: extensions/typescript-language-features
     featured: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       memoryLimit: 512Mi
       name: vscode-node
       memoryRequest: 20Mi
@@ -63,7 +63,7 @@ plugins:
     metaYaml:
      skipIndex: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: cpp-plugins
       memoryLimit: 512Mi
       memoryRequest: 20Mi
@@ -76,7 +76,7 @@ plugins:
     metaYaml:
      skipIndex: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: cpp-plugins
       memoryLimit: 512Mi
       memoryRequest: 20Mi
@@ -94,7 +94,7 @@ plugins:
         - llvm-vs-code-extensions/vscode-clangd
     featured: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: cpp-plugins
       memoryLimit: 512Mi
       memoryRequest: 20Mi
@@ -108,7 +108,7 @@ plugins:
     aliases:
       - redhat/php
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: php-intelephense
       memoryLimit: 1Gi
       memoryRequest: 20Mi
@@ -120,7 +120,7 @@ plugins:
       revision: 2020.7.94776
     featured: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-python
       memoryLimit: 1Gi
       memoryRequest: 20Mi
@@ -135,7 +135,7 @@ plugins:
       revision: v0.23.0
     featured: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-go
       memoryLimit: 512Mi
       memoryRequest: 20Mi
@@ -149,7 +149,7 @@ plugins:
       url: 'https://github.com/camel-tooling/vscode-camelk'
       revision: 0.0.26
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-camelk
       memoryLimit: 1Gi
       memoryRequest: 20Mi
@@ -160,7 +160,7 @@ plugins:
       url: 'https://github.com/redhat-developer/vscode-microprofile'
       revision: 174c77f51a57bf1cfadba8f78ad7072ce63baa1d
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-microp
       memoryLimit: 3500Mi
       memoryRequest: 20Mi
@@ -179,7 +179,7 @@ plugins:
     preferences:
       java.server.launchMode: Standard
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-quarkus
       memoryLimit: 3500Mi
       memoryRequest: 20Mi
@@ -201,7 +201,7 @@ plugins:
       url: 'https://github.com/camel-tooling/vscode-wsdl2rest'
       revision: 0.0.11
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       memoryLimit: 256Mi
       name: vscode-wsdl2rest
       memoryRequest: 20Mi
@@ -216,7 +216,7 @@ plugins:
     aliases:
       - redhat/dependency-analytics
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: dependency-analytics
       memoryLimit: 1Gi
       memoryRequest: 20Mi
@@ -233,7 +233,7 @@ plugins:
       url: 'https://github.com/redhat-developer/vscode-openshift-tools'
       revision: v0.2.11
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-openshift-connector
       memoryLimit: 1500Mi
       memoryRequest: 20Mi
@@ -252,7 +252,7 @@ plugins:
       revision: 0.14.0
     featured: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-yaml
       memoryLimit: 256Mi
       memoryRequest: 20Mi
@@ -265,7 +265,7 @@ plugins:
     metaYaml:
       skipIndex: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-java
       memoryLimit: 1500Mi
       memoryRequest: 20Mi
@@ -278,7 +278,7 @@ plugins:
     metaYaml:
       skipIndex: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-java
       memoryLimit: 1500Mi
       memoryRequest: 20Mi
@@ -295,7 +295,7 @@ plugins:
     preferences:
       java.server.launchMode: Standard
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-java
       memoryLimit: 1500Mi
       memoryRequest: 20Mi
@@ -321,7 +321,7 @@ plugins:
     preferences:
       java.server.launchMode: Standard
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-java
       memoryLimit: 1500Mi
       memoryRequest: 20Mi
@@ -342,7 +342,7 @@ plugins:
       - felixfbecker/vscode-php-debug
       - redhat/php-debugger
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: php-debugger
       memoryLimit: 512Mi
       memoryRequest: 20Mi
@@ -353,7 +353,7 @@ plugins:
       url: 'https://github.com/camel-tooling/camel-lsp-client-vscode'
       revision: 0.1.5
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-apache-camel
       memoryLimit: 768Mi
       memoryRequest: 20Mi
@@ -368,7 +368,7 @@ plugins:
       revision: 0.17.0
     featured: true
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-xml
       memoryLimit: 768Mi
       memoryRequest: 20Mi
@@ -379,7 +379,7 @@ plugins:
       url: 'https://github.com/Azure/vscode-kubernetes-tools'
       revision: 1.2.1
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-kubernetes-tools
       memoryLimit: 1Gi
       memoryRequest: 20Mi
@@ -391,7 +391,7 @@ plugins:
       url: 'https://github.com/redhat-developer/netcoredbg-theia-plugin'
       revision: v0.0.3
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: theia-netcoredbg
       memoryLimit: 512Mi
       memoryRequest: 20Mi
@@ -403,7 +403,7 @@ plugins:
       url: 'https://github.com/redhat-developer/omnisharp-theia-plugin'
       revision: v0.0.6
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: theia-omnisharp
       memoryLimit: 1Gi
       memoryRequest: 20Mi
@@ -417,7 +417,7 @@ plugins:
       url: 'https://github.com/SonarSource/sonarlint-vscode'
       revision: 1.20.1
     sidecar:
-      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:2.16"
+      image: "registry.redhat.io/codeready-workspaces/udi-rhel8:latest"
       name: vscode-sonarlint
       memoryLimit: 512Mi
       memoryRequest: 20Mi
