--- a/codeready-workspaces-devfileregistry/devfiles/05_dotnet/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/05_dotnet/devfile.yaml
@@ -21,7 +21,7 @@ components:
   -
     type: dockerimage
     alias: dotnet
-    image: registry.redhat.io/codeready-workspaces/udi-rhel8:2.16
+    image: registry.redhat.io/codeready-workspaces/udi-rhel8latest
     memoryLimit: 512Mi
     endpoints:
       - name: 'hello-endpoint'
