--- a/codeready-workspaces-devfileregistry/devfiles/05_php-di/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/05_php-di/devfile.yaml
@@ -19,7 +19,7 @@ components:
 -
   type: dockerimage
   alias: php
-  image: registry.redhat.io/codeready-workspaces/udi-rhel8:2.16
+  image: registry.redhat.io/codeready-workspaces/udi-rhel8latest
   memoryLimit: 512Mi
   mountSources: true
   endpoints:
