Change version 2.16 to latest

--- a/codeready-workspaces-devfileregistry/devfiles/02_java8-maven-fuse/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/02_java8-maven-fuse/devfile.yaml
@@ -23,7 +23,7 @@ components:
   -
     type: dockerimage
     alias: maven
-    image: registry.redhat.io/codeready-workspaces/udi-rhel8latest
+    image: registry.redhat.io/codeready-workspaces/udi-rhel8:latest
     env:
       - name: JAVA_OPTS
         value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
