--- a/codeready-workspaces-devfileregistry/devfiles/04_python/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/04_python/devfile.yaml
@@ -18,7 +18,7 @@ components:
   -
     type: dockerimage
     alias: python
-    image: registry.redhat.io/codeready-workspaces/udi-rhel8latest
+    image: registry.redhat.io/codeready-workspaces/udi-rhel8:latest
     memoryLimit: 512Mi
     mountSources: true
     volumes:
