--- a/codeready-workspaces-devfileregistry/devfiles/03_java11-maven-gradle/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/03_java11-maven-gradle/devfile.yaml
@@ -19,7 +19,7 @@ components:
   -
     type: dockerimage
     alias: gradle
-    image: registry.redhat.io/codeready-workspaces/udi-rhel8latest
+    image: registry.redhat.io/codeready-workspaces/udi-rhel8:latest
     env:
       - name: GRADLE_USER_HOME
         value: /home/jboss/.gradle
