--- a/codeready-workspaces-devfileregistry/devfiles/04_nodejs-mongo/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/04_nodejs-mongo/devfile.yaml
@@ -15,7 +15,7 @@ components:
     id: ms-vscode/node-debug2/latest
   - type: dockerimage
     alias: nodejs
-    image: registry.redhat.io/codeready-workspaces/udi-rhel8latest
+    image: registry.redhat.io/codeready-workspaces/udi-rhel8:latest
     env:
       # The values below are used to set up the environment for running the application
       - name: SECRET
