--- a/codeready-workspaces-devfileregistry/devfiles/05_cpp/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/05_cpp/devfile.yaml
@@ -20,7 +20,7 @@ components:
 -
   type: dockerimage
   alias: cpp-dev
-  image: registry.redhat.io/codeready-workspaces/udi-rhel8latest
+  image: registry.redhat.io/codeready-workspaces/udi-rhel8:latest
   memoryLimit: 512Mi
   mountSources: true
 commands:
