--- a/codeready-workspaces-devfileregistry/devfiles/05_go/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/05_go/devfile.yaml
@@ -19,7 +19,7 @@ components:
     go.lintFlags: '--fast'
 -
   type: dockerimage
-  image: registry.redhat.io/codeready-workspaces/udi-rhel8latest
+  image: registry.redhat.io/codeready-workspaces/udi-rhel8:latest
   alias: go-cli
   env:
     - name: GOPATH
