--- a/codeready-workspaces-devfileregistry/devfiles/00_java11-maven-microprofile-bootable/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/00_java11-maven-microprofile-bootable/devfile.yaml
@@ -4,9 +4,9 @@ metadata:
   generateName: jboss-eap-bootable-
 projects:
   -
-    name: jboss-eap-quickstart
+    name: jboss-eap-bootable
     source:
-      location: "https://github.com/crw-samples/microprofile-quickstart.git"
+      location: "https://github.com/crw-samples/microprofile-quickstart-bootable.git"
       branch: "xp-2.0.x"
       type: git
 components:
