Add ansible template

--- a/images-for-devfiles/ansible-test/Dockerfile
+++ b/images-for-devfiles/ansible-test/Dockerfile
@@ -19,4 +19,4 @@ USER 0
 
 RUN yum -y -q update
 RUN yum install -y -q curl vim policycoreutils python3-policycoreutils yum-utils
-RUN pip install -y setuptools_rust wheel ansible ansible-builder ansible-runner ansible-navigator 
+RUN pip install setuptools_rust wheel ansible ansible-builder ansible-runner ansible-navigator 
