--- a/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection/devfile.yaml
@@ -12,14 +12,14 @@ projects:
 components:
 -
   type: chePlugin
-  id: vscode-ansible
+  id: redhat/ansible/latest
 -
   type: chePlugin
-  id: redhat/vscode-yaml
+  id: redhat/vscode-yaml/latest
 -
   type: dockerimage
   alias: ansible
-  image: default-route-openshift-image-registry.apps-crc.testing/default/ansible-test-image
+  image: image-registry.openshift-image-registry.svc:5000/openshift-workspaces/ansible-test-image
   memoryLimit: 512Mi
 commands:
 -
