--- a/images-for-devfiles/ansible-test/Dockerfile
+++ b/images-for-devfiles/ansible-test/Dockerfile
@@ -20,7 +20,7 @@ USER 0
 RUN yum -y -q update
 RUN yum install -y -q curl vim policycoreutils python3-policycoreutils yum-utils
 RUN pip install --upgrade pip
-RUN pip install setuptools pytest pytest-mock mock setuptools_rust wheel ansible ansible-builder ansible-runner requests ansible_base ansible-navigator 
+RUN pip install setuptools pytest pytest-mock mock setuptools_rust wheel ansible requests
 
 CMD tail -f /dev/null
 
