--- a/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection/devfile.yaml
@@ -17,6 +17,11 @@ components:
   type: chePlugin
   id: redhat/vscode-yaml/latest
 -
+  type: chePlugin
+  id: ms-python/python/latest
+  preferences:
+    python.globalModuleInstallation: true
+-
   type: dockerimage
   alias: ansible
   image: image-registry.openshift-image-registry.svc:5000/openshift-workspaces/ansible-test-image
