Add podman to image

--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -18,7 +18,7 @@ USER 0
 
 
 RUN yum -y -q update
-RUN yum install -y -q curl vim policycoreutils python3-policycoreutils yum-utils
+RUN yum install -y -q curl vim policycoreutils python3-policycoreutils yum-utils podman
 RUN pip install --upgrade pip
 RUN pip install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
 
