--- a/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection/devfile.yaml
@@ -90,5 +90,5 @@ commands:
     - type: exec
       component: ansible-navigator
       command: "ansible-navigator"
-      workdir: ${CHE_PROJECTS_ROOT}/ansible-collection-template/ansible_collections/namespace_example/collection_example
+      workdir: "${CHE_PROJECTS_ROOT}/ansible-collection-template/ansible_collections/namespace_example/collection_example"
       runAsUser: root
