--- a/codeready-workspaces-devfileregistry/deploy/openshift/crw-devfile-registry.yaml
+++ b/codeready-workspaces-devfileregistry/deploy/openshift/crw-devfile-registry.yaml
@@ -104,6 +104,14 @@ objects:
                     optional: true
       triggers:
         - type: ConfigChange
+        - imageChangeParams:
+            automatic: true
+            containerNames:
+            - devfile-registry
+            from:
+              kind: ImageStreamTag
+              name: ${IMAGE}:${IMAGE_TAG}
+          type: ImageChange 
   - apiVersion: v1
     kind: Service
     metadata:
