--- a/codeready-workspaces-pluginregistry/openshift/che-plugin-registry.yml
+++ b/codeready-workspaces-pluginregistry/openshift/che-plugin-registry.yml
@@ -103,6 +103,14 @@ objects:
               optional: true
     triggers:
     - type: ConfigChange
+    - imageChangeParams:
+        automatic: true
+        containerNames:
+        - che-plugin-registry
+        from:
+          kind: ImageStreamTag
+          name: ${IMAGE}:${IMAGE_TAG}
+      type: ImageChange 
 - apiVersion: v1
   kind: Service
   metadata:
