--- a/codeready-workspaces-pluginregistry/deploy/openshift/crw-plugin-registry.yaml
+++ b/codeready-workspaces-pluginregistry/deploy/openshift/crw-plugin-registry.yaml
@@ -105,6 +105,14 @@ objects:
                     optional: true
       triggers:
         - type: ConfigChange
+        - imageChangeParams:
+            automatic: true
+            containerNames:
+            - plugin-registry
+            from:
+              kind: ImageStreamTag
+              name: ${IMAGE}:${IMAGE_TAG}
+          type: ImageChange 
   - apiVersion: v1
     kind: Service
     metadata:
