--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -22,9 +22,12 @@ RUN yum install -y -q curl vim policycoreutils python3-policycoreutils yum-utils
 RUN pip install --upgrade pip
 RUN pip install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
 
-RUN useradd podman;
-RUN echo podman:10000:5000 > /etc/subuid
-RUN echo podman:10000:5000 > /etc/subgid
+RUN useradd 1000660000;
+RUN echo 1000660000:10000:5000 > /etc/subuid
+RUN echo 1000660000:10000:5000 > /etc/subgid
+
+
+
 CMD tail -f /dev/null
 
 # append Brew metadata here
