change devfile ansible

--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -25,8 +25,8 @@ RUN pip install --upgrade pip
 RUN pip install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
 
 # RUN chmod 4755 /usr/bin/newuidmap
-RUN echo 1000660000:10000:5000 > /etc/subuid
-RUN echo 1000660000:10000:5000 > /etc/subgid
+RUN echo podman:10000:5000 > /etc/subuid
+RUN echo podman:10000:5000 > /etc/subgid
 
 
 
