change devfile ansible

--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -28,6 +28,11 @@ RUN pip install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0
 RUN echo podman:10000:5000 > /etc/subuid
 RUN echo podman:10000:5000 > /etc/subgid
 
+RUN mkdir /dev/net
+RUN mknod /dev/net/tun c 10 200
+RUN chmod 0666 /dev/net/tun
+RUN modprobe tun
+
 
 
 CMD tail -f /dev/null
