--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -20,8 +20,8 @@ USER 0
 RUN yum -y -q update
 RUN yum install -y -q curl vim python3 policycoreutils python3-policycoreutils yum-utils podman fuse-overlayfs --exclude container-selinux
 
-RUN pip install --upgrade pip
-RUN pip install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
+RUN pip3 install --upgrade pip
+RUN pip3 install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
 
 CMD tail -f /dev/null
 
