--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -22,6 +22,8 @@ RUN yum install -y -q curl vim python3 policycoreutils python3-policycoreutils y
 
 RUN pip3 install --upgrade pip
 RUN pip3 install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
+RUN mkdir /.local
+RUN chmod 755 /.local
 
 CMD tail -f /dev/null
 
