change devfile ansible

--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -23,7 +23,7 @@ RUN yum install -y -q curl vim python3 policycoreutils python3-policycoreutils y
 RUN pip3 install --upgrade pip
 RUN pip3 install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
 RUN mkdir /.local
-RUN chmod 755 /.local
+RUN chmod a+rwx /.local
 
 CMD tail -f /dev/null
 
