--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -22,6 +22,7 @@ dnf -y install crun podman fuse-overlayfs /etc/containers/storage.conf --exclude
 rm -rf /var/cache /var/log/dnf* /var/log/yum.*
 
 RUN dnf install -y -q curl vim python3 policycoreutils python3-policycoreutils yum-utils
+RUN pip3 install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
 
 RUN useradd podman; \
 echo podman:10000:5000 > /etc/subuid; \
