--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -57,8 +57,7 @@ RUN mkdir -p /var/lib/shared/overlay-images /var/lib/shared/overlay-layers /var/
 
 ENV _CONTAINERS_USERNS_CONFIGURED=""
 
-RUN useradd -ms /bin/bash 1000660000
-USER 1000660000
+RUN cat /etc/passwd > /etc/passwd.old
 
 CMD tail -f /dev/null
 
