--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -34,12 +34,14 @@ RUN chmod a+rwx /.config
 RUN chmod 4755 /usr/bin/newgidmap
 RUN chmod 4755 /usr/bin/newuidmap
 
+/usr/bin/
+
 RUN useradd podman; \
 echo podman:10000:5000 > /etc/subuid; \
 echo podman:10000:5000 > /etc/subgid;
 
-RUN echo 1000660000:10000:5000 >> /etc/subuid; \
-echo 1000660000:10000:5000 >> /etc/subgid;
+RUN echo 1000660000:100000:200000 >> /etc/subuid; \
+echo 1000660000:100000:200000 >> /etc/subgid;
 
 VOLUME /var/lib/containers
 RUN mkdir -p /home/podman/.local/share/containers
