--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -31,8 +31,8 @@ RUN mkdir /.cache
 RUN chmod a+rwx /.cache
 RUN mkdir /.config
 RUN chmod a+rwx /.config
-RUN chmod 4755 /usr/bin/newgidmap
-RUN chmod 4755 /usr/bin/newuidmap
+RUN chmod a+rwx /usr/bin/newgidmap
+RUN chmod a+rwx /usr/bin/newuidmap
 
 /usr/bin/
 
@@ -40,8 +40,8 @@ RUN useradd podman; \
 echo podman:10000:5000 > /etc/subuid; \
 echo podman:10000:5000 > /etc/subgid;
 
-RUN echo 1000660000:100000:200000 >> /etc/subuid; \
-echo 1000660000:100000:200000 >> /etc/subgid;
+RUN echo 1000660000:10000:5000 >> /etc/subuid; \
+echo 1000660000:10000:5000 >> /etc/subgid;
 
 VOLUME /var/lib/containers
 RUN mkdir -p /home/podman/.local/share/containers
