--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -22,7 +22,6 @@ dnf -y install crun podman fuse-overlayfs /etc/containers/storage.conf --exclude
 rm -rf /var/cache /var/log/dnf* /var/log/yum.*
 
 RUN dnf install -y -q curl vim python3 policycoreutils python3-policycoreutils yum-utils
-RUN yum install -y -q kernel-modules-extra
 RUN pip3 install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
 
 
@@ -42,6 +41,11 @@ echo podman:10000:5000 > /etc/subgid;
 
 RUN echo 1000660000:10000:5000 >> /etc/subuid; \
 echo 1000660000:10000:5000 >> /etc/subgid;
+
+RUN echo 1000650000:10000:5000 >> /etc/subuid; \
+echo 1000650000:10000:5000 >> /etc/subgid;
+
+
 
 VOLUME /var/lib/containers
 RUN mkdir -p /home/podman/.local/share/containers
