--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -39,11 +39,11 @@ RUN useradd podman; \
 echo podman:10000:5000 > /etc/subuid; \
 echo podman:10000:5000 > /etc/subgid;
 
-# RUN echo 1000660000:10000:5000 >> /etc/subuid; \
-# echo 1000660000:10000:5000 >> /etc/subgid;
+RUN echo 1000660000:10000:5000 >> /etc/subuid; \
+echo 1000660000:10000:5000 >> /etc/subgid;
 
-# RUN echo 1000650000:10000:5000 >> /etc/subuid; \
-# echo 1000650000:10000:5000 >> /etc/subgid;
+RUN echo 1000650000:10000:5000 >> /etc/subuid; \
+echo 1000650000:10000:5000 >> /etc/subgid;
 
 
 
