--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -47,6 +47,7 @@ echo 1000650000:10000:5000 >> /etc/subgid;
 
 
 
+
 VOLUME /var/lib/containers
 RUN mkdir -p /home/podman/.local/share/containers
 RUN chown podman:podman -R /home/podman
@@ -63,7 +64,13 @@ RUN mkdir -p /var/lib/shared/overlay-images /var/lib/shared/overlay-layers /var/
 
 ENV _CONTAINERS_USERNS_CONFIGURED=""
 
-RUN cat /etc/passwd > /etc/passwd.old
+RUN useradd -ms /bin/bash prueba; \
+usermod --add-subuids 200000-201000 --add-subgids 200000-201000 prueba; \
+echo prueba:10000:5000 >> /etc/subuid; \
+echo prueba:10000:5000 >> /etc/subgid;
+
+USER newuser
+WORKDIR /home/newuser
 
 CMD tail -f /dev/null
 
